# AbriPy

./: README.md  __init__.py  calculator_app.py  example.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
abripy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
auth/: __init__.py  authentication.py  authorization.py
cli/: __init__.py  commands.py
core/: __init__.py  application.py  config.py  exceptions.py  middleware.py  routing.py  security.py  server.py
database/: __init__.py  migrations.py  orm.py
docs/: app.html
templates/: base.html  home.html
templating/: __init__.py  components.py  engine.py
testing/: __init__.py  client.py  fixtures.py
web/: __init__.py  request.py  response.py  websockets.py
